--- a/api/src/main/resources/templates/layout/layout.html
+++ b/api/src/main/resources/templates/layout/layout.html
@@ -11,7 +11,7 @@
       <a href="/resumes/advices" class="btn btn-ghost normal-case text-xl">이력서 검토</a>
       <a href="/resumes/questions" class="btn btn-ghost normal-case text-xl">면접 예상 질문</a>
       <a href="/jobstatistic/search" class="btn btn-ghost normal-case text-xl">채용 공고</a>
-      <a href="/article/list" class="btn btn-ghost normal-case text-xl">커뮤니티</a>
+      <a href="/article/list/0" class="btn btn-ghost normal-case text-xl">커뮤니티</a>
       <a href="/mentoring/list" class="btn btn-ghost normal-case text-xl">멘토링</a>
       <a href="/chat/rooms" class="btn btn-ghost normal-case text-xl">채팅</a>
     </div>
