Feat: 멘토링 등록 부분에 마크다운 추가

--- a/api/src/main/resources/templates/chat/rooms.html
+++ b/api/src/main/resources/templates/chat/rooms.html
@@ -61,7 +61,7 @@
 <main layout:fragment="main" class="container my-3 mx-auto">
     <div class="container mx-auto p-8 w-1/2">
         <div class="flex items-center justify-between h-16">
-            <a href="/article/list" class="text-2xl font-bold flex-grow">채팅방 목록</a>
+            <a href="/chat/rooms" class="text-2xl font-bold flex-grow">채팅방 목록</a>
         </div>
         <ul class="container">
             <li class="bg-neutral text-white p-3 flex justify-between border-b h-11 rounded-md">
