--- a/api/src/main/resources/templates/mentoring/createForm.html
+++ b/api/src/main/resources/templates/mentoring/createForm.html
@@ -3,18 +3,24 @@
     <title>멘토링 작성</title>
 
     <style>
+
         .image-upload > input
         {
             display: none;
         }
     </style>
+
+    <!--toastui-->
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+    <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
 </head>
 <body>
+
 <main layout:fragment="main" class="container mx-auto">
     <div class="container mx-auto py-8 w-1/3">
         <h1 class="text-2xl font-bold">멘토링 작성</h1>
 
-        <form class="mt-4" th:object="${mentoringRequestDto}" method="post" enctype="multipart/form-data">
+        <form class="mt-4" th:object="${mentoringRequestDto}" method="post">
             <div class="mb-4">
                 <p>제목(필수)</p>
                 <input type="text" name="title" th:field="*{title}" class="form-input w-full border border-neutral rounded-md h-10 p-3" placeholder="제목을 입력하세요">
@@ -46,12 +52,32 @@
             </div>
             <div class="mb-4">
                 <p>내용(필수)</p>
-                <textarea name="content" th:field="*{content}" class="form-textarea w-full h-64 resize-none border border-neutral rounded-md p-3" placeholder="본문을 입력하세요"></textarea>
+                <textarea name="content" th:field="*{content}" class="form-textarea hidden" id="hidden-content"></textarea>
+                <div class="form-textarea" id="editor"></div>
             </div>
 
-            <button type="submit" class="register bg-neutral hover:bg-black text-white font-bold px-4 py-2 rounded border-neutral" >저장하기</button>
+            <button onclick="submitForm()" class="register bg-neutral hover:bg-black text-white font-bold px-4 py-2 rounded border-neutral" >저장하기</button>
         </form>
     </div>
+    <script>
+        const Editor = toastui.Editor;
+        const editor = new Editor({
+            el : document.querySelector('#editor'),
+            toolbarItems: [
+                ['heading', 'bold', 'italic', 'strike'],
+                ['hr', 'quote'],
+            ],
+        });
+        // 폼 제출 시 에디터의 내용을 숨겨진 textarea 필드에 할당
+        const form = document.querySelector('form');
+
+        function submitForm() {
+            const hiddenContent = document.querySelector('#hidden-content');
+            hiddenContent.value = editor.getMarkdown();
+            const form = document.querySelector('form');
+            form.submit();
+        }
+    </script>
 </main>
 
 </body>
