--- a/api/src/main/resources/templates/mentoring/detailMentoring.html
+++ b/api/src/main/resources/templates/mentoring/detailMentoring.html
@@ -25,10 +25,14 @@
 
         }
     </style>
+    <!--toastui-->
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+    <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+    <!-- toast ui viewer js -->
+    <!-- <script src="https://uicdn.toast.com/editor/3.0.2/toastui-editor-viewer.min.js"></script> -->
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
-
     <div class="container mx-auto py-8 w-1/3">
         <a href="/mentoring/list" class="bg-white text-neutral px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 멘토링</a>
         <h1 class="text-2xl font-bold flex-grow pl-3 mt-2 truncate overflow-ellipsis" th:text="${mentoring.title}"></h1>
@@ -59,13 +63,11 @@
 
         <div class="min-h-[200px]">
             <div style="word-wrap: break-word;">
-                <div class="text-sm pl-3 min-h-[120px]" style="word-break: break-word; white-space: pre-wrap;"  th:text="${mentoring.content}"></div>
+                <div class="toast-custom-viewer text-sm pl-3 min-h-[120px]"></div>
             </div>
         </div>
         <hr class="border-neutral mb-4">
         <button type="button" class="apply ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black" onclick="openModal()">신청하기</button>
-
-
 
         <!-- 모달 창 -->
         <div id="modal" class="modal-overlay">
@@ -99,14 +101,25 @@
                             <button type="submit" class="mt-2 apply bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black" onclick="return confirm('정말로 신청하시겠습니까?')">신청하기</button>
                         </div>
                         <button type="button" onclick="closeModal()">닫기</button>
+
                     </div>
                 </form>
+
 
             </div>
         </div>
     </div>
 
-    <script layout:fragment="script" type='text/javascript'>
+    <script th:inline="javascript">
+        const viewer = toastui.Editor.factory({
+            el : document.querySelector(".toast-custom-viewer"),
+            viewer : true,
+            initialValue : /*[[${mentoring.content}]]*/
+        });
+        const content = document.getElementById("content");
+
+        content.innerHTML =  /*[[${mentoring.content}]]*/;
+
         var today = new Date();
         var tomorrow = new Date(today);
         tomorrow.setDate(tomorrow.getDate() + 1);
