View: 커뮤니티 리스트 뷰 수정(카드형태)

--- a/api/src/main/resources/templates/article/detailArticle.html
+++ b/api/src/main/resources/templates/article/detailArticle.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
-    <div class="container mx-auto py-8 w-1/2">
+    <div class="container mx-auto py-8 w-[770px]">
 
         <a href="/article/list/0" class="bg-white text-neutral px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 게시글</a>
         <h1 class="text-2xl font-bold flex-grow pl-3 mt-2 truncate overflow-ellipsis" th:text="${article.title}"></h1>
