Refactor: nickname 공백제거하도록

--- a/api/src/main/resources/templates/member/recover-username.html
+++ b/api/src/main/resources/templates/member/recover-username.html
@@ -18,7 +18,7 @@ ii
                 </div>
 
                 <div style="display: inline;" class="bg-neutral text-white px-4 py-2 rounded-lg hover:bg-black">
-                    <button type="submit">로그인</button>
+                    <button type="submit">확인</button>
                 </div>
             </form>
         </div>
