--- a/api/src/main/resources/templates/mentoring/detailMentoring.html
+++ b/api/src/main/resources/templates/mentoring/detailMentoring.html
@@ -24,6 +24,10 @@
             height: auto;
 
         }
+
+        .toastui-editor-contents p {
+            font-family: "GmarketSansMedium";
+        }
     </style>
     <!--toastui-->
     <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
@@ -33,7 +37,7 @@
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
-    <div class="container mx-auto py-8 w-1/3">
+    <div class="container mx-auto py-8 w-[512px]">
         <a href="/mentoring/list" class="bg-white text-neutral px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 멘토링</a>
         <h1 class="text-2xl font-bold flex-grow pl-3 mt-2 truncate overflow-ellipsis" th:text="${mentoring.title}"></h1>
         <div class="flex justify-between mt-2 mb-1">
@@ -61,12 +65,12 @@
             </div>
         </div>
 
-        <div class="min-h-[200px]">
+        <div class="min-h-[200px] mb-6">
             <div style="word-wrap: break-word;">
                 <div class="toast-custom-viewer text-sm pl-3 min-h-[120px]"></div>
             </div>
         </div>
-        <hr class="border-neutral mb-4">
+        <hr class="border-neutral my-6">
         <button type="button" class="apply ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black" onclick="openModal()">신청하기</button>
 
         <!-- 모달 창 -->
@@ -121,15 +125,13 @@
         content.innerHTML =  /*[[${mentoring.content}]]*/;
 
         var today = new Date();
-        var tomorrow = new Date(today);
-        tomorrow.setDate(tomorrow.getDate() + 1);
 
-        var year = tomorrow.getFullYear();
-        var month = String(tomorrow.getMonth() + 1).padStart(2, '0');
-        var day = String(tomorrow.getDate()).padStart(2, '0');
-        var tomorrowDate = year + '-' + month + '-' + day;
+        var year = today.getFullYear();
+        var month = String(today.getMonth() + 1).padStart(2, '0');
+        var day = String(today.getDate()).padStart(2, '0');
+        var todayDate = year + '-' + month + '-' + day;
 
-        document.getElementById("date-input").setAttribute("min", tomorrowDate);
+        document.getElementById("date-input").setAttribute("min", todayDate);
         function openModal() {
             document.getElementById("modal").style.display = "flex";
             document.body.style.overflow = "hidden";
