--- a/api/src/main/resources/templates/article/list.html
+++ b/api/src/main/resources/templates/article/list.html
@@ -32,7 +32,7 @@
 <body>
     <main layout:fragment="main" class="container my-3 mx-auto">
         <form method="get" id="toListForm">
-            <div class="container mx-auto p-8 w-2/3">
+            <div class="container mx-auto p-8 w-[1024px]">
                 <ul class="flex mb-4">
                     <li>
                         <a href="/article/list/0" class="category_btn btn-sm border-1 btn btn-outline m-1">전체</a>
