--- a/api/src/main/resources/templates/chat/rooms.html
+++ b/api/src/main/resources/templates/chat/rooms.html
@@ -59,7 +59,7 @@
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
-    <div class="container mx-auto p-8 w-1/2">
+    <div class="container mx-auto p-8 w-[770px]">
         <div class="flex items-center justify-between h-16">
             <a href="/chat/rooms" class="text-2xl font-bold flex-grow">채팅방 목록</a>
         </div>
