--- a/api/src/main/resources/templates/common/layout.html
+++ b/api/src/main/resources/templates/common/layout.html
@@ -35,6 +35,11 @@
 <!-- 테일윈드 불러오기 -->
 <script src="https://cdn.tailwindcss.com"></script>
 
+
+<!--toastui-->
+<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+<script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+
 <div class="min-h-screen flex flex-col pb-10">
     <header layout:fragment="header"></header>
 
