--- a/api/src/main/resources/templates/article/modifyForm.html
+++ b/api/src/main/resources/templates/article/modifyForm.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <main layout:fragment="main" class="container mx-auto">
-    <div class="container mx-auto py-8 w-1/2">
+    <div class="container mx-auto py-8 w-[770px]">
         <form class="mt-4" method="post" enctype="multipart/form-data">
             <div class="flex">
                 <p class="text-2xl font-bold mb-3">카테고리</p>
@@ -24,7 +24,8 @@
             </div>
 
             <div class="mb-4">
-                <textarea name="content" oninput="handleTextareaInput(event)" th:text="${article.content}" class="form-textarea w-full h-64 resize-none border border-neutral rounded-md p-3" placeholder="본문을 입력하세요"></textarea>
+                <textarea name="content" class="form-textarea hidden" id="hidden-content"></textarea>
+                <div class="form-textarea" id="editor"></div>
             </div>
 
             <div class="flex justify-between mb-4">
@@ -74,12 +75,20 @@
             </div>
             <input type="hidden" id="hashTagStr" name="hashTagStr"/>
 
-            <button type="submit" class="register bg-neutral hover:bg-black text-white font-bold px-4 py-2 rounded border-neutral" onclick="submitForm()">저장하기</button>
+            <button class="register bg-neutral hover:bg-black text-white font-bold px-4 py-2 rounded border-neutral" onclick="submitForm()">저장하기</button>
         </form>
     </div>
 
 
-    <script layout:fragment="script" type='text/javascript'>
+    <script th:inline="javascript">
+        const Editor = toastui.Editor;
+        const editor = new Editor({
+            el : document.querySelector('#editor'),
+            previewStyle: 'vertical',
+            height: '500px',
+            initialValue: /*[[${article.content}]]*/
+        });
+
         var hashTagList = document.getElementById('hashTagList');
         var hashTags = hashTagList.getElementsByClassName('keyword');
         var removeKeywords = ["신입", "취준", "자소서", "면접", "q&a", "이직", "퇴사", "잡담"];
@@ -182,7 +191,11 @@
                 hashTagValues.push(hashTagText);
             }
             document.getElementById('hashTagStr').value = hashTagValues.join(',');
-            document.forms[0].submit();
+
+            const hiddenContent = document.querySelector('#hidden-content');
+            hiddenContent.value = editor.getMarkdown();
+            const form = document.querySelector('form');
+            form.submit();
         }
 
         function previewImage(event) {
