--- a/api/src/main/resources/templates/member/login.html
+++ b/api/src/main/resources/templates/member/login.html
@@ -1,17 +1,12 @@
-ii
 <html layout:decorate="~{layout/layout.html}">
 <head>
     <title>로그인</title>
-</head>
-<body>
-<main layout:fragment="main" class="container my-3 mx-auto">
     <script>
         const loginFormInputUsernameValueMinLength = 4;
         const loginFormInputPasswordValueMinLength = 4;
 
         function LoginForm__submit(form) {
             // username 이(가) 올바른지 체크
-
             form.username.value = form.username.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
 
             if (form.username.value.length === 0) {
@@ -46,10 +41,13 @@ ii
         }
     </script>
 
+</head>
+<body>
+<main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
             <h2 class="text-xl font-semibold mb-4">🔐 로그인</h2>
-            <form th:action method="post" th:object="${loginRequestDto}" class="flex flex-col gap-6"
+            <form th:action method="post" class="flex flex-col gap-6"
                   onsubmit="LoginForm__submit(this); return false;">
                 <div class="form-control">
                     <label class="block mb-2">아이디</label>
@@ -68,12 +66,13 @@ ii
                         <button type="submit">로그인</button>
                     </div>
                     <div style="display: inline;" class="bg-neutral text-white px-4 py-2 rounded-lg hover:bg-black">
-                        <a href="" class="hover:text-primary">아이디찾기</a>
-                         /
-                        <a href="" class="hover:text-primary">비밀번호찾기</a>
+                        <a href="/member/recover/username" class="hover:text-primary" style="cursor: pointer;">아이디찾기</a>
+                        /
+                        <a href="/member/recover/password" class="hover:text-primary" style="cursor: pointer;">비밀번호찾기</a>
                     </div>
                 </div>
             </form>
+
             <div class="space-y-4">
                 <a class="btn btn-block btn-outline gap-1 border-[color:#ffe812]" style="border-color: #ffe812;"
                    href="/oauth2/authorization/kakao">
