--- a/api/src/main/resources/templates/member/login.html
+++ b/api/src/main/resources/templates/member/login.html
@@ -1,46 +1,75 @@
 <html layout:decorate="~{layout/layout.html}">
 <head>
     <title>로그인</title>
+    <script src="/resource/valid/login.js"></script>
     <script>
-        const loginFormInputUsernameValueMinLength = 4;
-        const loginFormInputPasswordValueMinLength = 4;
+        function openIdModal() {
+            const modalContainer = document.getElementById("modalContainer");
 
-        function LoginForm__submit(form) {
-            // username 이(가) 올바른지 체크
-            form.username.value = form.username.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.username.value.length === 0) {
-                toastWarning('아이디를 입력해주세요.');
-                form.username.focus();
-                return;
-            }
-
-            if (form.username.value.length < loginFormInputUsernameValueMinLength) {
-                toastWarning('아이디를 ' + loginFormInputUsernameValueMinLength + '자 이상 입력해주세요.');
-                form.username.focus();
-                return;
-            }
-
-            // password 이(가) 올바른지 체크
-
-            form.password.value = form.password.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.password.value.length === 0) {
-                toastWarning('비밀번호를 입력해주세요.');
-                form.password.focus();
-                return;
-            }
-
-            if (form.password.value.length < loginFormInputPasswordValueMinLength) {
-                toastWarning('비밀번호를 ' + loginFormInputPasswordValueMinLength + '자 이상 입력해주세요.');
-                form.password.focus();
-                return;
-            }
-
-            form.submit(); // 폼 발송
+            fetch("/member/recover/username", {
+                method: 'get'
+            })
+                .then(response => response.text())
+                .then(html => {
+                    modalContainer.innerHTML = html;
+                    const modal = modalContainer.querySelector("#modal");
+                    modal.style.display = "block";
+                });
         }
-    </script>
 
+        function closeIdModal() {
+            const modalContainer = document.getElementById("modalContainer");
+            modalContainer.innerHTML = "";
+        }
+
+        function openPasswordModal() {
+            const modalContainer = document.getElementById("modalContainer");
+
+            fetch("/member/recover/password", {
+                method: 'get'
+            })
+                .then(response => response.text())
+                .then(html => {
+                    modalContainer.innerHTML = html;
+                    const modal = modalContainer.querySelector("#modal");
+                    modal.style.display = "block";
+                });
+        }
+
+        function closePasswordModal() {
+            const modalContainer = document.getElementById("modalContainer");
+            modalContainer.innerHTML = "";
+        }
+
+        function recoverUsername() {
+            const emailValue = document.getElementById('email').value.trim();
+            const emailMessage = document.getElementById('emailMessage');
+            const emailContainer = document.getElementById('emailContainer');
+
+            const formData = new FormData();
+            formData.append("email", emailValue);
+
+            fetch("/member/recover/username", {
+                method: 'post',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.resultCode !== 'S-1') { // 요청실패
+                        emailMessage.innerText = data.msg;
+                        emailMessage.classList.add("text-red-500");
+                        emailMessage.classList.remove("text-green-500");
+                    } else { // 요청성공
+                        emailMessage.innerText = "아이디는 " + data.msg + "입니다.";
+                        emailMessage.classList.add("text-green-500");
+                        emailMessage.classList.remove("text-red-500");
+                    }
+
+                    emailContainer.style.display = "block";
+                });
+        }
+
+    </script>
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
@@ -66,12 +95,16 @@
                         <button type="submit">로그인</button>
                     </div>
                     <div style="display: inline;" class="bg-neutral text-white px-4 py-2 rounded-lg hover:bg-black">
-                        <a href="/member/recover/username" class="hover:text-primary" style="cursor: pointer;">아이디찾기</a>
+                        <a onclick="openIdModal()" class="hover:text-primary" style="cursor: pointer;">아이디찾기</a>
                         /
-                        <a href="/member/recover/password" class="hover:text-primary" style="cursor: pointer;">비밀번호찾기</a>
+                        <a onclick="openPasswordModal()" class="hover:text-primary" style="cursor: pointer;">비밀번호찾기</a>
                     </div>
                 </div>
             </form>
+
+            <!-- 모달 창을 인클루드 -->
+            <div id="modalContainer">
+            </div>
 
             <div class="space-y-4">
                 <a class="btn btn-block btn-outline gap-1 border-[color:#ffe812]" style="border-color: #ffe812;"
