--- a/api/src/main/resources/templates/member/recover-username.html
+++ b/api/src/main/resources/templates/member/recover-username.html
@@ -1,43 +1,11 @@
-<html layout:decorate="~{layout/layout.html}">
+<!doctype html>
+<html lang="en">
 <head>
     <title>아이디 찾기</title>
-    <script>
-        function recoverUsername() {
-            const emailValue = document.getElementById('email').value.trim();
-            const emailMessage = document.getElementById('emailMessage');
-            const emailContainer = document.getElementById('emailContainer');
-
-            const formData = new FormData();
-            formData.append("email", emailValue);
-
-            fetch("/member/recover/username", {
-                method: 'post',
-                body: formData
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.resultCode !== 'S-1') { // 요청실패
-                        emailMessage.innerText = data.msg;
-                        emailMessage.classList.add("text-red-500");
-                        emailMessage.classList.remove("text-green-500");
-                    } else { // 요청성공
-                        emailMessage.innerText = "아이디는 " + data.msg + "입니다.";
-                        emailMessage.classList.add("text-green-500");
-                        emailMessage.classList.remove("text-red-500");
-                    }
-
-                    emailContainer.style.display = "block";
-                });
-
-            event.preventDefault();
-        }
-    </script>
-
 </head>
 <body>
-
-<main layout:fragment="main" class="container my-3 mx-auto">
-    <div class="flex justify-center items-center min-h-screen">
+<div id="modal" style="display: none;">
+    <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
             <h2 class="text-xl font-semibold mb-4">🔍 아이디 찾기</h2>
             <div class="flex flex-col gap-6">
@@ -51,14 +19,17 @@
                 </div>
 
                 <div class="flex justify-end">
-                    <button onclick="recoverUsername();"
-                            class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">
-                        확인
+                    <button type="button" onclick="recoverUsername();"
+                            class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">확인
+                    </button>
+                    <button type="button" class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                            onclick="closeIdModal();">취소
                     </button>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </main>
 </body>
 
