Refactor: 멘토 측에서 삭제한 채팅방은 가져오지 않도록 쿼리 수정

--- a/api/src/main/resources/templates/chat/room.html
+++ b/api/src/main/resources/templates/chat/room.html
@@ -347,7 +347,7 @@
                 });
 
                 $("#quit-button").on("click", function (e) {
-                    if(!confirm("정말로 삭제하시겠습니까?")) {
+                    if(!confirm("정말로 종료하시겠습니까?")) {
                         e.preventDefault();
                         return;
                     };
