--- a/api/src/main/resources/templates/article/createForm.html
+++ b/api/src/main/resources/templates/article/createForm.html
@@ -32,7 +32,6 @@
             </div>
 
             <div class="mb-4">
-<!--                <textarea name="content" oninput="handleTextareaInput(event)" th:field="*{content}" class="form-textarea w-full h-64 resize-none border border-neutral rounded-md p-3" placeholder="본문을 입력하세요"></textarea>-->
                 <textarea name="content" th:field="*{content}" class="form-textarea hidden" id="hidden-content"></textarea>
                 <div id="editor"></div>
             </div>
@@ -56,17 +55,16 @@
 
             <div class="mb-4 border border-neutral flex items-center rounded-md">
                 <p class="pl-3">#</p>
-                <input type="text" id="hashTagInput" class="form-input w-full border-0 border-neutral rounded-md h-10" placeholder="태그를 입력하세요" onkeydown="if(event.keyCode===13) addHashTag(event); else if(even.keyCode===8) return true; return false;">
+                <input type="text" id="hashTagInput" class="form-input w-full border-0 border-neutral rounded-md h-10" placeholder="태그를 입력하세요" onkeydown="handleHashTagInput(event)">
             </div>
 
             <div id="hashTagList" class="flex flex-wrap mb-4">
                 <div th:if="${!articleRequestDto.hashTags.isEmpty()}" th:each="hashTag : ${articleRequestDto.hashTags}">
                     <div class="bg-gray-300 px-2 py-1 rounded-full m-1">
                         <span th:text="|#${hashTag.keyword.content}|" class="keyword"></span>
-                        <span onclick="this.parentNode.remove();" class="ml-1 cursor-pointer">&times;</span>
+                        <span onclick="removeHashTag(event)" class="ml-1 cursor-pointer">&times;</span>
                     </div>
                 </div>
-                <!-- 해시태그 목록이 여기에 추가될 것입니다. -->
             </div>
             <input type="hidden" id="hashTagStr" name="hashTagStr" th:field="*{hashTagStr}" />
 
@@ -105,6 +103,7 @@
             const value = selectedOption.value; // 선택된 option의 value 가져오기
             const text = selectedOption.text; // 선택된 option의 text 가져오기
 
+            // 기존 해시태그 삭제
             hashTagList.innerHTML = '';
 
             const listItem = document.createElement('div'); // 새로운 해시태그 div 요소 생성
@@ -118,68 +117,102 @@
 
             hashTagInput.value = ''; // 입력한 텍스트 초기화
         });
+
         // 해시태그 추가를 위한 함수
-        function addHashTag(event) {
-            event.preventDefault();
-            const hashTagText = hashTagInput.value.trim().replace(/\s+/g, '').toLowerCase(); // 띄어쓰기 제거 및 소문자로 변환
+        function addHashTag(hashTag) {
+            const hashTagItems = hashTagList.getElementsByClassName('keyword');
+            const hashTagValues = [];
 
+            for (let i = 0; i < hashTagItems.length; i++) {
+                const hashTagText = hashTagItems[i].textContent.trim().substring(1);
+                hashTagValues.push(hashTagText);
+            }
 
-            if(hashTagText.length > 10) {
-                toastWarning('해시태그는 최대 10자까지 작성할 수 있습니다.');
+            document.getElementById('hashTagStr').value = hashTagValues.join(',');
+
+            // 최대 개수를 초과하는 경우 Toast 경고 메시지 출력
+            if (hashTagValues.length > 4) {
+                toastWarning('해시태그는 최대 5개까지 작성할 수 있습니다.');
                 hashTagInput.focus();
                 return;
             }
 
-            if (hashTagText !== '') {
-                const listItem = document.createElement('div');
-                const keyword = document.createElement('span');
-                listItem.className = 'bg-gray-300 px-2 py-1 rounded-full m-1';
-                keyword.className = 'keyword';
-                keyword.textContent = '#' + hashTagText;
-                keyword.id = 'hashTagItem_' + hashTagText;
+            const listItem = document.createElement('div');
+            const keyword = document.createElement('span');
+            listItem.className = 'bg-gray-300 px-2 py-1 rounded-full m-1';
+            keyword.className = 'keyword';
+            keyword.textContent = hashTag;
 
-                var closeButton = document.createElement('span');
-                closeButton.className = 'ml-2 cursor-pointer';
-                closeButton.innerHTML = '&times;';
-                closeButton.addEventListener('click', function () {
-                    listItems.remove();
-                });
+            const closeButton = document.createElement('span');
+            closeButton.className = 'ml-2 cursor-pointer';
+            closeButton.innerHTML = '&times;';
+            closeButton.addEventListener('click', function (event) {
+                removeHashTag(event);
+            });
 
-                listItem.appendChild(keyword);
-                listItem.appendChild(closeButton);
-                hashTagList.appendChild(listItem);
-                hashTagInput.value = '';
+            listItem.appendChild(keyword);
+            listItem.appendChild(closeButton);
+            hashTagList.appendChild(listItem);
+        }
+
+        // 해시태그 삭제를 위한 함수
+        function removeHashTag(event) {
+            const listItem = event.target.parentNode;
+            listItem.remove();
+
+            // 해시태그 목록에서 삭제된 해시태그 값을 업데이트
+            updateHashTagValues();
+        }
+
+        // 해시태그 값을 업데이트하는 함수
+        function updateHashTagValues() {
+            const hashTagItems = hashTagList.getElementsByClassName('keyword');
+            const hashTagValues = [];
+
+            for (let i = 0; i < hashTagItems.length; i++) {
+                const hashTagText = hashTagItems[i].textContent.trim().substring(1);
+                hashTagValues.push(hashTagText);
+            }
+
+            document.getElementById('hashTagStr').value = hashTagValues.join(',');
+
+            // 최대 개수를 초과하는 경우 Toast 경고 메시지 출력
+            if (hashTagValues.length > 4) {
+                toastWarning('해시태그는 최대 5개까지 작성할 수 있습니다.');
+                hashTagInput.focus();
+                return;
+            }
+        }
+
+        // 해시태그 입력을 처리하는 함수
+        function handleHashTagInput(event) {
+            if (event.keyCode === 13) {
+                event.preventDefault();
+
+                const hashTagText = hashTagInput.value.trim().replace(/\s+/g, '').toLowerCase(); // 띄어쓰기 제거 및 소문자로 변환
+
+                if (hashTagText.length > 10) {
+                    toastWarning('해시태그는 최대 10자까지 작성할 수 있습니다.');
+                    hashTagInput.focus();
+                    return;
+                }
+
+                if (hashTagText !== '') {
+                    addHashTag('#' + hashTagText);
+                    hashTagInput.value = ''; // 입력한 텍스트 초기화
+                }
             }
         }
 
         // 폼 전송을 위한 함수
         function submitForm() {
-            var hashTagList = document.getElementById('hashTagList');
-            var hashTagItems = hashTagList.getElementsByClassName('keyword');
-            var hashTagValues = [];
-            for (var i = 0; i < hashTagItems.length; i++) {
-                var hashTagText = hashTagItems[i].textContent.trim().substring(1);
-                hashTagValues.push(hashTagText);
-            }
-            document.getElementById('hashTagStr').value = hashTagValues.join(',');
-
             const hiddenContent = document.querySelector('#hidden-content');
             hiddenContent.value = editor.getMarkdown();
+
+            updateHashTagValues();
+
             const form = document.querySelector('form');
             form.submit();
-        }
-
-        function previewImage(event) {
-            var reader = new FileReader();
-            reader.onload = function () {
-                var imagePreview = document.getElementById('imagePreview');
-                var image = document.createElement('img');
-                image.src = reader.result;
-                image.classList.add('w-36', 'h-36', 'object-cover');
-                imagePreview.innerHTML = '';
-                imagePreview.appendChild(image);
-            }
-            reader.readAsDataURL(event.target.files[0]);
         }
 
         function handleFileSelect(event, index) {
@@ -204,12 +237,7 @@
             previewImage.src = "https://i.ibb.co/d7wH0dJ/image4.png"; // 기본 이미지로 되돌리기
             cancelButton.style.display = "none";
         }
-
-        function handleTextareaInput(event) {
-            event.target.value = event.target.value.replace(/\n/g, '\r\n');
-        }
     </script>
 </main>
-
 </body>
 </html>
